# hospital_list_images_to_excel

./: .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
config/: apellidos_comunes.csv  centros.csv  especialidades.csv  lugares.csv  nombres_comunes.csv
src/hospital_ocr/: __init__.py  __main__.py  catalogs.py  cli.py  consolidation.py  discovery.py  editing.py  evaluation.py  exporting.py  grid_detector.py  handwriting.py  image_processor.py  matching.py  models.py  name_splitter.py  ocr_cache.py  ocr_engine.py  ocr_refinement.py  parsing.py  pipeline.py  pipeline_types.py  preprocessing.py  processing_metrics.py  recognition.py  table_parser.py  text.py  web_app.py  web_launcher.py  web_service.py
src/hospital_ocr/table_extraction/: __init__.py  common.py  detection.py  fields.py  parser.py  rows.py  schema.py  sections.py  types.py
tests/: parsing_helpers.py  test_catalogs_and_discovery.py  test_consolidation.py  test_editing.py  test_evaluation.py  test_exporting.py  test_grid_detector.py  test_handwriting.py  test_name_splitter.py  test_ocr_cache.py  test_parsing_and_consolidation.py  test_parsing_fields.py  test_parsing_lists.py  test_parsing_sections.py  test_parsing_tables.py  test_pipeline_cache.py  test_pipeline_modes.py  test_pipeline_safety.py  test_preprocessing.py  test_web_app.py  test_web_service.py
