[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-list-images-to-excel"
version = "0.1.0"
description = "Pipeline local para convertir listas hospitalarias manuscritas en Excel."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openpyxl>=3.1,<4",
    "paddleocr>=3.7,<3.8",
    "pandas>=3,<4",
    "Pillow>=12,<13",
    "streamlit>=1.45,<2",
]

[project.optional-dependencies]
dev = ["pytest>=9,<10"]

[project.scripts]
hospital-ocr = "hospital_ocr.cli:main"
hospital-ocr-web = "hospital_ocr.web_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
